--- a/CSS/macska/macska.css
+++ b/CSS/macska/macska.css
@@ -13,6 +13,16 @@ nav a {
   background-color: yellow;
 }
 
+nav a:hover {
+  color: red;
+  padding: 20px;
+  background-color: yellow;
+}
+
 h2, h3 {
     color: purple;
+}
+
+body {
+    color: coral;
 }
