--- a/CSS/szelektorok/style.css
+++ b/CSS/szelektorok/style.css
@@ -8,5 +8,14 @@
 
 .vorosek {
     color: red;
+    font-size: 20px;
+}
+
+div {
+    border: 1px solid black;
+}
+
+p:first-of-type {
+    color: green;
 }
 
