--- a/CSS/szelektorok/style.css
+++ b/CSS/szelektorok/style.css
@@ -15,7 +15,37 @@ div {
     border: 1px solid black;
 }
 
-p:first-of-type {
-    color: green;
+body>p:first-of-type {
+    color: yellow;
 }
 
+body>p {
+    background-color: blueviolet;
+}
+
+li.vorosek+li {
+    background-color: yellow;
+}
+
+li.vorosek~li {
+    border-right: 5px solid brown;
+}
+
+p:first-child {
+    font-size: 30px;
+}
+ol li:nth-child(4) {
+    font-family: 'Courier New';
+}
+
+tr:nth-child(2n+1) {
+    background-color: indianred;
+}
+
+[title] {
+    font-style: italic;
+}
+
+[title = "masodik"] {
+    font-weight: bold;
+}
