--- a/CSS/karakterformazasok/style.css
+++ b/CSS/karakterformazasok/style.css
@@ -21,3 +21,31 @@
 #p5 {
     font-family: cursive;
 }
+
+#p6 {
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#p7 {
+    font-family: fantasy;
+}
+
+#p8 {
+    font-family: Tangerine;
+}
+
+#p9 {
+    font-variant: small-caps;
+}
+
+#p10 {
+    font-size: 20px;
+}
+
+body {
+    font-size: 40px;
+}
+
+#p11 {
+    font-size: 200%;
+}
