--- a/CSS/karakterformazasok/style.css
+++ b/CSS/karakterformazasok/style.css
@@ -55,3 +55,25 @@ body {
     font-size: 1.2em;
     /* font-size: 120%; */
 }
+
+#p14 {
+    font-size: 6vw; 
+}
+
+#p15 {
+    color: red;
+    letter-spacing: 6px;
+}
+
+#p16 {
+    color: blue;
+    letter-spacing: -0.5px;
+}
+
+#p17 { 
+/*  font-weight: bold;
+    font-variant: small-caps;
+    font-size: 20px;
+    font-family: fantasy; */
+    font: bold small-caps 20px fantasy;
+}
